# HDG_ML_Git

./: Deploy_File_Changes.py  Makefile  README.md  Survey.h  helper.h  helper_blas.h  main.cpp  main_do.h  main_test.cpp  monitors.h  quadrature_calculation.h  run.py  table_delaunay_wrapper.f90  table_tet_wrapper.f90  test.pde.bak  training.py
Anisotropy/: analyzesolution.h  anisotropicadap.h  augmentmetric.h  computeadjointbasedmetric.h  computedualresidual.h  computegradanisotropy.h  computehighorderderivative.h  computehpanisotropy.h  computelocalresidual.h  computemaxdirectionalderivatives.h  computemaxdirectionalderivativesgrad.h  computemeshmetric.h  computeoptimumanisotropy.h  computeprimalresidual.h  computescaledanisotropy.h  computesolutionanisotropy.h  computesolutionmetric.h  computesolutionsize.h  gfunc.h  helper.h  intersectmetric.h  intersecttwometric.h  metric.h  optimizeanisotropy.h  readorder.h  reconstructfunction.h  regularizeanisotropy.h  savemetric.h  solaniso.h  writeorder.h
Extra/madlib/: CMakeLists.txt  buildGCC.sh
Extra/madlib/CustomAdaptation/: cube.msh  main.cc  square.msh
Extra/madlib/CustomAdaptation3D/: main.cc
HDG/: allocatetempmemory.h  checkupdate.h  computemonitors.h  computewalldistance.h  element_access.h  elementdata.h  hdg_init.h  helper.h  initial.h  limitupdate.h  loadparameters.h  loadsolution.h  loadsolutionbamg.h  patchreconstruction.h  patchreconstruction_l2.h  prolongateorder.h  reconstructsolution.h  savesolution.h  savesolutionbamg.h  shock_residual.h  solvelinearizedsystem.h  test.h  testjacobian.h  testlocalsolves.h  transfercoefficients.h  updatesolution.h  writeVtu.h  writeVtuSurface.h  writetecplot.h  writetecplotcellwise.h  writetecplotsurface.h
LinearAlgebra/: petsc_wrapper.cpp  petsc_wrapper.h
ML/: deployml.h  file_reader.py  generatemldata.h  helper.h  ip_scaler.save  ml_elementdata.h  mlunittest.h  op_scaler.save  python_module.py  test_ml.pde  training_DO_NOT_USE.py  writemldata.h  writemldata_marking.h
Models/: dummymodel.h  models.h
Post_Processing_Scripts/: NDOF_Error_Plot.ipynb  NDOF_Error_Plot.py  cell_wise_ml_error_all.ipynb  cell_wise_ml_error_all.py  cell_wise_ml_error_particular.py  different_ndof_error_plot.py  error_data.csv  error_data_plot.py
Scripts/: a.out  angener2netgen.cpp  angener2netgen.h  bamg.geo  bamg.mesh  bamg2netgen.cpp  madlib2d2netgen.cpp  madlib2d2netgen.h  madlib3d2netgen.cpp  madlib3d2netgen.h  mesh_functions2d.h  mmg2d2netgen.cpp  mmg2d2netgen.h  mmg3d2netgen.cpp  mmg3d2netgen.h  netgen.in2d  netgen.vol  netgen2bamg.cpp  netgen2bamg.h  netgen2bamg.out  netgen2bamg_gmsh  netgen2bamg_gmsh.cpp  netgen2bamg_gmsh.h  netgen2bamg_ho.cpp  netgen2bamg_ho.h  netgen2bamg_ho.out  netgen2madlib2d.cpp  netgen2madlib2d.h  netgen2madlib3d.cpp  netgen2madlib3d.h  netgen2mmg2d.cpp  netgen2mmg2d.h  netgen2mmg3d.cpp  netgen2mmg3d.h  netgen2refine.cpp  netgen2refine.h  ng.ini  (+7 more)
(+211 files in other folders)
